--- a/PhedPay/Views/Shared/_Layout.cshtml
+++ b/PhedPay/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom shadow-sm sticky-top">
             <div class="container-fluid px-4">
-                <a class="navbar-brand d-flex align-items-center" asp-page="/Index">
+                <a class="navbar-brand d-flex align-items-center" href="/">
                     <img src="~/images/logo.png" alt="PhedPay Logo" />
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
