--- a/PhedPay/Views/Payment/Receipt.cshtml
+++ b/PhedPay/Views/Payment/Receipt.cshtml
@@ -276,7 +276,7 @@
     <!-- Download Button - PRIMARY FOCUS -->
     <a asp-action="DownloadReceipt" asp-route-transactionId="@Model.TransactionReference"
        class="btn btn-download-primary">
-        <i class="bi bi-download"></i>Download Receipt
+        <i class="bi bi-download"></i>Get Token
     </a>
 
     <!-- Receipt Card -->
