--- a/PhedPay/Views/Payment/ConfirmPayment.cshtml
+++ b/PhedPay/Views/Payment/ConfirmPayment.cshtml
@@ -272,6 +272,12 @@
                     </span>
                     <span class="detail-value">@ViewBag.MeterNo</span>
                 </div>
+                <div class="detail-row">
+                    <span class="detail-label">
+                        <i class="bi bi-speedometer2 me-2"></i>Incident Rate
+                    </span>
+                    <span class="detail-value">@ViewBag.FactorAmount</span>
+                </div>
 
                 <div class="detail-row">
                     <span class="detail-label">
