--- a/PhedPay/Views/Payment/Requery.cshtml
+++ b/PhedPay/Views/Payment/Requery.cshtml
@@ -140,7 +140,7 @@
                 <div id="receiptError" class="alert alert-danger d-none">
                     Could not retrieve receipt details. Please try downloading directly.
                     <button id="retryBtn"
-                            class="btn btn-lg btn-warning text-white"
+                            class="btn btn-lg btn-danger text-white"
                             onclick="retryFailedTransaction()">
                         <span id="retryBtnText">Retry Token Generation</span>
                         <span id="retryBtnSpinner" class="spinner-border spinner-border-sm d-none ms-2"></span>
