--- a/PhedPay/Views/Shared/_Layout.cshtml
+++ b/PhedPay/Views/Shared/_Layout.cshtml
@@ -40,10 +40,10 @@
                             <a class="nav-link" href="https://map.phed.com.ng">Buy Meter Online</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-action="Index">{Retrieve Token - coming soon}</a>
+                            <a class="nav-link" asp-action="Requery">Retrieve Token</a>
                         </li>
                         <li class="nav-item ms-lg-2">
-                            <a class="nav-link pay-btn" asp-page="/Pay">Pay Now</a>
+                            <a class="nav-link pay-btn" asp-action="Index">Pay Now</a>
                         </li>
                     </ul>
                 </div>
