--- a/PhedPay/Views/Payment/Index.cshtml
+++ b/PhedPay/Views/Payment/Index.cshtml
@@ -218,7 +218,7 @@
                     </div>
 
                     <!-- Amount -->
-                    <div class="col-md-6">
+                    <!--div class="col-md-6">
                         <label asp-for="Amount" class="form-label">
                             Amount (₦) <span class="text-danger">*</span>
                         </label>
@@ -231,7 +231,7 @@
                                required />
                         <div class="info-text">Minimum: ₦100</div>
                         <span asp-validation-for="Amount" class="text-danger small"></span>
-                    </div>
+                    </div-->
                 </div>
 
                 <!-- Submit Button -->
